As03-12/08/2024-Our agent component complete

--- a/components/03-organisms/ouragentcomp/ouragentcomp.yml
+++ b/components/03-organisms/ouragentcomp/ouragentcomp.yml
@@ -1,3 +1,58 @@
 ouragentcomptitle: 'Our Agents'
 ouragentcomptitlestyle: 'heading2--section'
 ouragentcompsubtitle: 'Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit'
+ouragentitems:
+ - img: 'https://bootstrapmade.com/demo/templates/EstateAgency/assets/img/team/team-1.jpg'
+   imgstyle: 'image--2'
+   heading: 'Walter White'
+   headingstyle: 'heading4--1'
+   span: 'Chief Executive Officer'
+   socialitems:
+    - biclass: 'bi bi-twitter-x'
+      url: 'https://twitter.com/'
+      biclassstyle: 'buttn--2'
+    - biclass: 'bi bi-facebook'
+      url: 'https://facebook.com/'
+      biclassstyle: 'buttn--2'
+    - biclass: 'bi bi-instagram'
+      url: 'https://instagram.com/'
+      biclassstyle: 'buttn--2'
+    - biclass: 'bi bi-linkedin'
+      url: 'https://linkedin.com/'
+      biclassstyle: 'buttn--2'
+ - img: 'https://bootstrapmade.com/demo/templates/EstateAgency/assets/img/team/team-2.jpg'
+   imgstyle: 'image--2'
+   heading: 'Sarah Jhonson'
+   headingstyle: 'heading4--1'
+   span: 'Rent Manager'
+   socialitems:
+    - biclass: 'bi bi-twitter-x'
+      url: 'https://twitter.com/'
+      biclassstyle: 'buttn--2'
+    - biclass: 'bi bi-facebook'
+      url: 'https://facebook.com/'
+      biclassstyle: 'buttn--2'
+    - biclass: 'bi bi-instagram'
+      url: 'https://instagram.com/'
+      biclassstyle: 'buttn--2'
+    - biclass: 'bi bi-linkedin'
+      url: 'https://linkedin.com/'
+      biclassstyle: 'buttn--2'
+ - img: 'https://bootstrapmade.com/demo/templates/EstateAgency/assets/img/team/team-3.jpg'
+   imgstyle: 'image--2'
+   heading: 'William Anderson'
+   headingstyle: 'heading4--1'
+   span: 'Sale manager'
+   socialitems:
+    - biclass: 'bi bi-twitter-x'
+      url: 'https://twitter.com/'
+      biclassstyle: 'buttn--2'
+    - biclass: 'bi bi-facebook'
+      url: 'https://facebook.com/'
+      biclassstyle: 'buttn--2'
+    - biclass: 'bi bi-instagram'
+      url: 'https://instagram.com/'
+      biclassstyle: 'buttn--2'
+    - biclass: 'bi bi-linkedin'
+      url: 'https://linkedin.com/'
+      biclassstyle: 'buttn--2'
