--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
+    "@srexi/purecounterjs": "^1.5.0",
     "add-attributes-twig-extension": "^0.1.0",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
@@ -57,6 +58,7 @@
     "slick-carousel": "^1.8.1",
     "storybook": "^7.5.1",
     "stylelint-selector-bem-pattern": "^3.0.1",
+    "swiper": "^11.1.9",
     "twig-drupal-filters": "^3.2.0",
     "wowjs": "^1.1.3"
   },
