--- a/emulsify.libraries.yml
+++ b/emulsify.libraries.yml
@@ -1,10 +1,21 @@
+aos:
+  css:
+    theme:
+      'https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css': {}
+  js:
+    'https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js': {}
+  dependencies:
+    - core/jquery
+
 bootstrap:
   version: 5.x
   css:
     theme:
-      https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css: {}
+      https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css:
+        {}
   js:
-    https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js: {}
+    https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js:
+      {}
   dependencies:
     - core/jquery
 
@@ -12,13 +23,23 @@ bootstrap_icons:
   version: 1.10.0
   css:
     theme:
-      https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css: {}
+      https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css:
+        {}
 
 global:
   css:
     theme:
-      components\style.css: {}
-      
+      assets/css/style.css: {}
+      https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css: {}
+  js:
+    assets/scripts/style.js: {}
+    https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js: {}
+    assets/scripts/slick.js: {}
+    assets/scripts/propertyslick.js: {}
+    assets/scripts/shortsslick.js: {}
+    assets/scripts/condition.js: {}
+  dependencies:
+    - core/jquery
 
 main-menu:
   js:
